--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -2,12 +2,10 @@
 - name: Stop Apache
   service: name=apache2 state=stopped
 - name: Obtain or renew cert for domain
-  shell: chdir=/opt/letsencrypt ./letsencrypt-auto certonly -m {{ letsencrypt_email }} -d {{ letsencrypt_domain }} --agree-tos --apache
+  raw: executable=/bin/bash cd /opt/letsencrypt && ./letsencrypt-auto certonly -m {{ letsencrypt_email }} -d {{ letsencrypt_domain }} --agree-tos --apache > /tmp/letsencrypt-auto.log &
   ignore_errors: yes  # Otherwise we end up with dead Apache2 on failure
-  register: letsencrypt_result
+- name: Sleep for a bit
+  # What a stupid hack. For some reason ./letsencrypt-auto never returns. Until debugging done, just sleep a bit
+  raw: sleep 30
 - name: Start Apache
   service: name=apache2 state=started
-- name: Stop if letsencrypt failed
-  # We've got Apache2 back up - now abort if letsencrypt failed
-  command: /bin/false
-  when: "letsencrypt_result.rc != 0"
