--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -1,11 +1,3 @@
 ---
-- name: Stop Apache
-  service: name=apache2 state=stopped
 - name: Obtain or renew cert for domain
-  raw: executable=/bin/bash cd /opt/letsencrypt && ./letsencrypt-auto certonly -m {{ letsencrypt_email }} -d {{ letsencrypt_domain }} --agree-tos --apache > /tmp/letsencrypt-auto.log &
-  ignore_errors: yes  # Otherwise we end up with dead Apache2 on failure
-- name: Sleep for a bit
-  # What a stupid hack. For some reason ./letsencrypt-auto never returns. Until debugging done, just sleep a bit
-  raw: sleep 30
-- name: Start Apache
-  service: name=apache2 state=started
+  shell: executable=/bin/bash cd /opt/letsencrypt && ./letsencrypt-auto certonly -m {{ letsencrypt_email }} -d {{ letsencrypt_domain }} --agree-tos --keep --apache
