--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -3,23 +3,18 @@
 - set_fact: letsencrypt_certbot_args="{{letsencrypt_certbot_args + '--renew-by-default'}}"
   when: letsencrypt_force_renew == true
 
+- set_fact: letsencrypt_domain="{{letsencrypt_domain}},www.{{letsencrypt_domain}}"
+  when: letsencrypt_request_www
+
 - name: Stopping Services
   service: name="{{item}}" state=stopped
   with_items: "{{ letsencrypt_pause_services }}"
 
-- name: Obtain or renew cert for domain (with www)
-  shell: ./certbot-auto certonly -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }},www.{{ letsencrypt_domain }} --agree-tos --standalone --expand {{letsencrypt_certbot_args | join(' ')}}
-  args:
-    chdir: /opt/certbot
-    executable: /bin/bash
-  when: letsencrypt_request_www
-
-- name: Obtain or renew cert for domain (without www)
+- name: Obtain or renew cert for domain
   shell: ./certbot-auto certonly -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }} --agree-tos --standalone --expand {{letsencrypt_certbot_args | join(' ')}}
   args:
     chdir: /opt/certbot
     executable: /bin/bash
-  when: not letsencrypt_request_www
 
 - name: Starting Services
   service: name="{{item}}" state=started
