--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,3 +10,7 @@ letsencrypt_certbot_version: master
 # Pause these services while updating the certificate
 letsencrypt_pause_services:
   - apache2
+# Force Certificate Reneval
+letsencrypt_force_renew: true
+# Additional certbot arguments
+letsencrypt_certbot_args: []
