--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -1,18 +1,21 @@
 ---
 
+- set_fact: letsencrypt_certbot_args="{{letsencrypt_certbot_args + '--renew-by-default'}}"
+  when: letsencrypt_force_renew == true
+
 - name: Stopping Services
   service: name="{{item}}" state=stopped
   with_items: "{{ letsencrypt_pause_services }}"
 
 - name: Obtain or renew cert for domain (with www)
-  shell: ./certbot-auto certonly -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }},www.{{ letsencrypt_domain }} --agree-tos --renew-by-default --standalone --expand
+  shell: ./certbot-auto certonly -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }},www.{{ letsencrypt_domain }} --agree-tos --standalone --expand {{letsencrypt_certbot_args | join(' ')}}
   args:
     chdir: /opt/certbot
     executable: /bin/bash
   when: letsencrypt_request_www
 
 - name: Obtain or renew cert for domain (without www)
-  shell: ./certbot-auto certonly -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }} --agree-tos --renew-by-default --standalone --expand
+  shell: ./certbot-auto certonly -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }} --agree-tos --standalone --expand {{letsencrypt_certbot_args | join(' ')}}
   args:
     chdir: /opt/certbot
     executable: /bin/bash
