--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -1,6 +1,6 @@
 ---
 
-- set_fact: letsencrypt_certbot_args="{{letsencrypt_certbot_args + '--renew-by-default'}}"
+- set_fact: letsencrypt_certbot_args="{{letsencrypt_certbot_args + ['--renew-by-default']}}"
   when: letsencrypt_force_renew == true
 
 - set_fact: letsencrypt_domain="{{letsencrypt_domain}},www.{{letsencrypt_domain}}"
