Run certbot with non-interactive flag
This will stop Ansible hanging on unexpected prompts. Arrived in Certbot 0.6.0, so that became the minimum supported version.

--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -14,7 +14,7 @@
   with_items: "{{ letsencrypt_pause_services }}"
 
 - name: Obtain or renew cert for domain
-  shell: ./certbot-auto certonly --text -m {{ letsencrypt_email }} --domains {{ _letsencrypt_domains | default(letsencrypt_domain) }} --agree-tos --standalone --expand {{_letsencrypt_certbot_args | join(' ')}} 2>&1
+  shell: ./certbot-auto certonly --text -n -m {{ letsencrypt_email }} --domains {{ _letsencrypt_domains | default(letsencrypt_domain) }} --agree-tos --standalone --expand {{_letsencrypt_certbot_args | join(' ')}} 2>&1
   args:
     chdir: /opt/certbot
     executable: /bin/bash
