--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,8 +10,7 @@ letsencrypt_certbot_version: master
 # Print Certbot output
 letsencrypt_certbot_verbose: true
 # Pause these services while updating the certificate
-letsencrypt_pause_services:
-  - apache2
+letsencrypt_pause_services: []
 # Force Certificate Reneval
 letsencrypt_force_renew: true
 # Additional certbot arguments
