check certification outcome by reading certbot stdout

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,5 @@
 ---
 # vars file for letsencrypt
+
+certbot_skip_renewal_message: "Certificate not yet due for renewal; no action taken"
+certbot_success_message: "Congratulations!"
