always print certbot output when letsencrypt_certbot_verbose role option is true

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,8 @@ letsencrypt_domain: example.com
 letsencrypt_request_www: true
 # Version/Release tag or branch name of certbot to use
 letsencrypt_certbot_version: master
+# Print Certbot output
+letsencrypt_certbot_verbose: true
 # Pause these services while updating the certificate
 letsencrypt_pause_services:
   - apache2
