--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -1,12 +1,12 @@
 ---
 
-- set_fact: letsencrypt_certbot_args="{{letsencrypt_certbot_args + ['--renew-by-default']}}"
+- set_fact: _letsencrypt_certbot_args="{{letsencrypt_certbot_args + ['--renew-by-default']}}"
   when: letsencrypt_force_renew == true
 
-- set_fact: letsencrypt_certbot_args="{{letsencrypt_certbot_args + ['--keep-until-expiring']}}"
+- set_fact: _letsencrypt_certbot_args="{{letsencrypt_certbot_args + ['--keep-until-expiring']}}"
   when: letsencrypt_force_renew != true
 
-- set_fact: letsencrypt_domain="{{letsencrypt_domain}},www.{{letsencrypt_domain}}"
+- set_fact: _letsencrypt_domains="{{letsencrypt_domain}},www.{{letsencrypt_domain}}"
   when: letsencrypt_request_www
 
 - name: Stopping Services
@@ -14,7 +14,7 @@
   with_items: "{{ letsencrypt_pause_services }}"
 
 - name: Obtain or renew cert for domain
-  shell: ./certbot-auto certonly -t -m {{ letsencrypt_email }} --domains {{ letsencrypt_domain }} --agree-tos --standalone --expand {{letsencrypt_certbot_args | join(' ')}} 2>&1
+  shell: ./certbot-auto certonly -t -m {{ letsencrypt_email }} --domains {{ _letsencrypt_domains | default(letsencrypt_domain) }} --agree-tos --standalone --expand {{_letsencrypt_certbot_args | join(' ')}} 2>&1
   args:
     chdir: /opt/certbot
     executable: /bin/bash
