--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -16,7 +16,7 @@
   register: _services_stopped
 
 - name: Obtain or renew cert for domain
-  shell: ./certbot-auto certonly --text -n -m {{ letsencrypt_email }} --domains {{ _letsencrypt_domains | default(letsencrypt_domain) }} --agree-tos --standalone --expand {{_letsencrypt_certbot_args | join(' ')}} 2>&1
+  shell: ./certbot-auto certonly --text -n --no-self-upgrade -m {{ letsencrypt_email }} --domains {{ _letsencrypt_domains | default(letsencrypt_domain) }} --agree-tos --standalone --expand {{_letsencrypt_certbot_args | join(' ')}} 2>&1
   args:
     chdir: /opt/certbot
     executable: /bin/bash
