Fix starting paused services
The stopped services result dict had no failed dict key for successfully stopped services. Always start services which are stopped.

--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -31,7 +31,7 @@
 
 - name: Starting paused Services
   service: name="{{item.item}}" state=started
-  when: (item.failed != true) and (item.state == "stopped")
+  when: (item.state is defined and item.state == "stopped")
   with_items: "{{ _services_stopped.results }}"
 
 - fail: msg="Error signing the certificate"
