Add changelog for Apache2 removal from dependencies
Add also meta for Debian support and special mention for the work of @gronke in adding to this role.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,6 +8,9 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - trusty
+  - name: Debian
+    versions:
+    - jessie
   categories:
   - cloud
   - web
