Add default to _services_stopped.results
Just in case stopping services is skipped for some reason like in issue #20

--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -28,7 +28,7 @@
 - name: Starting paused Services
   service: name="{{item.item}}" state=started
   when: (item.state is defined and item.state == "stopped")
-  with_items: "{{ _services_stopped.results }}"
+  with_items: "{{ _services_stopped.results|default([]) }}"
 
 - fail: msg="Error signing the certificate"
   when: (not _signing_successful) and not _signing_skipped
