--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,3 +26,7 @@ letsencrypt_certbot_default_args:
   - --domains '{{ _letsencrypt_domains | default(letsencrypt_domain) }}'
   - -m '{{letsencrypt_email}}'
   - --agree-tos
+
+
+# This is enabled when running tests - DO NOT TOUCH
+letsencrypt_test: false
