--- a/tasks/client.yaml
+++ b/tasks/client.yaml
@@ -1,4 +1,5 @@
 ---
+# clone client from source
 - name: Operating system dependencies
   apt: name={{ item }} state=present
   with_items:
@@ -12,8 +13,10 @@
     - dialog
     - libaugeas0
     - ca-certificates
+  when: not ansible_distribution_release == 'stretch'
 - name: Python cryptography module
   pip: name=cryptography
+  when: not ansible_distribution_release == 'stretch'
 - name: Letsencrypt Python client
   git:
     dest: /opt/certbot
@@ -22,3 +25,11 @@
     repo: https://github.com/certbot/certbot
     force: yes
     version: '{{letsencrypt_certbot_version}}'
+  when: not ansible_distribution_release == 'stretch'
+
+# install client from package repo (available in debian stretch)
+- name: Install Certbot
+  apt: name={{ item }} update_cache=yes state=latest
+  with_items:
+    - certbot
+  when: ansible_distribution_release == 'stretch'
