--- a/tasks/cert.yaml
+++ b/tasks/cert.yaml
@@ -28,7 +28,7 @@
     chdir: /opt/certbot
     executable: /bin/bash
   ignore_errors: true
-  register: _certbot_command
+  register: _certbot_command_source_client
   when:
     - not letsencrypt_test
     - not ansible_distribution_release == 'stretch'
@@ -39,10 +39,15 @@
   args:
     executable: /bin/bash
   ignore_errors: true
-  register: _certbot_command
+  register: _certbot_command_debian_client
   when:
     - not letsencrypt_test
     - ansible_distribution_release == 'stretch'
+
+# combine results
+# because of rather unpleasant ansible feature, see https://github.com/ansible/ansible/issues/4297
+- set_fact:
+    _certbot_command: "{{ _certbot_command_debian_client if ansible_distribution_release == 'stretch' else _certbot_command_source_client }}"
 
 # analyze output
 - set_fact: _signing_successful='{{ certbot_success_message in _certbot_command.stdout }}'
